Tela retorno subscriber

--- a/html/templates/detalhe_envio_brasil.html
+++ b/html/templates/detalhe_envio_brasil.html
@@ -301,5 +301,37 @@
         </div>
       </div>
     </div>
+<!-- Sucesso -->
+        <div class="container">
+            <div class="box-resposta">
+                <p class="text-success"><i class="fa fa-check-circle fa-3x"></i></p>
+                <p class="titulo text-success">Parabéns. <br> Sua Assinatura está ATIVA</p><br>
+                <a class="btn btn-primary btn-block btn-block-70" href="#"><i class="fa fa-link"></i> Acessar Plataforma Agora</a>
+            </div>
+        </div>
+<!-- sucesso -->
+
+        <!-- Falha -->
+            <div class="container">
+                <div class="box-resposta">
+                    <p class="text-danger"><i class="fa fa-times-circle fa-3x"></i></p>
+                    <p class="titulo text-danger">Falha. <br> Sua Assinatura NÃO foi ativada</p>
+                    <p class="text-info">Entre em contato com o suporte pelo email support@voiservices.com</p>
+                    <p><a href="#"><i class="fa fa-link"></i> Voltar para tela de cadastro</a> </p><br>
+                </div>
+            </div>
+        <!-- Falha -->
+
+        <!-- Cancelamento -->
+            <div class="container">
+                <div class="box-resposta">
+                    <p class="text-info"><i class="fa fa-frown fa-5x"></i></p>
+                    <p class="titulo text-info">Assinatura Cancelada.</p>
+                    <p class="text-info">Uma pena velo partir. Esperamos que volte em breve.</p>
+                </div>
+            </div>
+        <!-- cancelamento -->
+
+
 
 {% endblock %}
