--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -2118,6 +2118,7 @@ footer.fixed-footer{
 .sistema .bandeira {
     top: 11px;
     border: 0;
+    display: none;
 }
 
 .bandeira.bandeira-en{
@@ -2334,6 +2335,11 @@ padding-bottom: 20px;
 
 .no-service:hover{
     cursor: text;
+}
+
+.btn-block-70{
+    width: 70%;
+    margin: 0 auto;
 }
 
 .box-comparativo-valor .box-valor ul li i{
