--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -348,7 +348,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3"><br />
-                    <span class="copyright">{% trans "Copyright &copy; VOI Services 2018" %}</span>
+                    <span class="copyright">{% trans "Copyright &copy; VOI Services 2019" %}</span>
                 </div>
                 <div class="col-md-3"><br /><!--
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
@@ -630,9 +630,9 @@
                     <h4 class="modal-title"><i class="fas fa-hand-paper" style="font-size: 30px;"></i> {% trans "Confirmação" %}</h4>
                 </div>
                 <div class="modal-body">
-                    <p class="fba-text">{% trans "Afirmo ter analisado atentamente todas as informações deste lote, estando ciente que o prosseguimento desta compra me torna proprietário dos produtos contidos no mesmo, e de toda a responsabilidade acerca do destino que será dado aos mesmos. E isso inclui a Voi Services não realizar reembolso do valor pago em caso de desistência por qualquer motivo." %}</p>
+                    <p class="fba-text">{% trans "Afirmo ter analisado atentamente todas as informações deste lote, estando ciente que o prosseguimento desta compra me torna proprietário dos produtos contidos no mesmo, e de toda a responsabilidade acerca do destino que será dado aos mesmos. E isso inclui a VOI Services não realizar reembolso do valor pago em caso de desistência por qualquer motivo." %}</p>
                     <p class="fbm-text">{% trans "Este é um lote para envio MERCHANT. Os itens são destinados a vendedores Ebay, Ecommerce próprio e também para envio internacional." %}</p>
-                    <p class="fbm-text">{% trans "Afirmo ter analisado atentamente todas as informações deste lote, estando ciente que o prosseguimento desta compra me torna proprietário dos produtos contidos, e de toda a responsabilidade acerca do destino que será dado aos mesmos. E isso inclui a Voi Services não realizar reembolso do valor pago em caso de desistência por qualquer motivo." %}</p>
+                    <p class="fbm-text">{% trans "Afirmo ter analisado atentamente todas as informações deste lote, estando ciente que o prosseguimento desta compra me torna proprietário dos produtos contidos, e de toda a responsabilidade acerca do destino que será dado aos mesmos. E isso inclui a VOI Services não realizar reembolso do valor pago em caso de desistência por qualquer motivo." %}</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" id="btn-confirmar-modal-compra" data-action-url="" class="btn btn-primary" data-dismiss="modal"><i class="fas fa-check"></i> {% trans "Confirmar Compra" %}</button>
