--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -2493,6 +2493,90 @@ ul.listaancora li a{
     top: 23px;
 }
 
+.main .box-shadow {
+    box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, .05);
+}
+
+.main .mb-4, .my-4 {
+    margin-bottom: 1.5rem!important;
+}
+
+.card {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
+
+.card-img-top {
+    width: 100%;
+    border-top-left-radius: calc(.25rem - 1px);
+    border-top-right-radius: calc(.25rem - 1px);
+}
+
+.card-body {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1.25rem;
+}
+
+.align-items-center {
+    -webkit-box-align: center!important;
+    -ms-flex-align: center!important;
+    align-items: center!important;
+}
+
+.justify-content-between {
+    -webkit-box-pack: justify!important;
+    -ms-flex-pack: justify!important;
+    justify-content: space-between!important;
+}
+.d-flex {
+    display: -webkit-box!important;
+    display: -ms-flexbox!important;
+    display: flex!important;
+}
+
+.btn-group, .btn-group-vertical {
+    position: relative;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    vertical-align: middle;
+}
+
+.box-main{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100000000;
+    color: #fff;
+    font-size: 62px;
+    background: rgba(0, 0, 0, .5);
+    width: 100%;
+    height: 66%;
+}
+
+.box-main strong{
+    width: 100%;
+    float: left;
+    text-align: center;
+    margin-top: 68px;
+    line-height: 55px;
+}
+
+
 @media (min-width: 1350px){
     .container {
         width: 1350px;
