--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -508,9 +508,11 @@
                     <div class="col-md-12">
                         <button type="submit" id="send-btn" class="btn btn-primary"><i class="fa fa-fw fa-paper-plane"></i> {% trans "Salvar" %}</button><br><br>
                     </div>
+                    <br><br><br>
                 </form>
+
             </div>
-            <div class="col-md-4 box-cad-esquerda">
+            <difv class="col-md-4 box-cad-esquerda">
                 <div class="box-valor">
                     <h3 class="page-header"> {% trans "Nossos planos disponíveis" %}:</h3>
                 </div>
@@ -518,13 +520,13 @@
             <div class="box-comparativo-valor">
                 <div class="box-valor">
                     <p class="seja center">VOI Prime</p>
-                    <p class="assinate-span"><span>U$ 74,90</span>/mês</p><br>
-                    <small>*Sem adesão. Cancele a qualquer momento.</small>
+                    <p class="assinate-span"><span>U$ 74,90</span>/{% trans "mês" %}</p><br>
+                    <small>*{% trans "Sem adesão. Cancele a qualquer momento" %}.</small>
                     <ul>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Acesso a compra de lotes</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Envio para Amazon em até 3 dias úteis após a compra</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Redirecionamento Grátis</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='/lots/how-it-works/' class='download'>Saiba Mais</a></span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Acesso a compra de lotes" %}</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Envio para Amazon em até 3 dias úteis após a compra" %}</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Redirecionamento Grátis" %}</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='/lots/how-it-works/' class='download'>{% trans "Saiba Mais" %}</a></span></li>
                     </ul>
 
                     <div class="contem-btn-ass">
@@ -536,11 +538,11 @@
                 <div class="box-comparativo-valor">
                 <div class="box-valor">
                     <p class="seja center">We Create your Amazon Shipment</p>
-                    <p class="assinate-span"><span>U$ 24,90</span>/mês</p><br>
-                    <small>*Sem adesão. Cancele a qualquer momento.</small>
+                    <p class="assinate-span"><span>U$ 24,90</span>/{% trans "mês" %}</p><br>
+                    <small>*{% trans "Sem adesão. Cancele a qualquer momento" %}.</small>
                     <ul>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>Criamos seu envio para Amazon para você</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='/create-az-shipment/' class='download'>Saiba Mais</a></span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Criamos seu envio para Amazon para você" %}</span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='/create-az-shipment/' class='download'>{% trans "Saiba Mais" %}</a></span></li>
                     </ul>
 
                     <div class="contem-btn-ass">
@@ -549,8 +551,7 @@
                 </div>
             </div>
 
-
-            </div>
+            </difv>
             <div class="col-md-1">
             </div><br><br>
             <div class="col-md-12">
