--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -113,7 +113,7 @@
                     <div class="col-md-3"></div>
                     <div class="col-md-3">
                         <div class="col-schedule">
-                            <span>{% blocktrans %}Terças{% endblocktrans %}</span>
+                            <span>{% blocktrans %}Quartas{% endblocktrans %}</span>
                             <br>
                             <p>{% blocktrans %}Manhã{% endblocktrans %}: 10:30<br>{% blocktrans %}Noite{% endblocktrans %}: 20:30</p>
                             <smal>({% blocktrans %}Horário de Brasília{% endblocktrans %})</smal>
@@ -121,7 +121,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="col-schedule">
-                            <span>{% blocktrans %}Quintas{% endblocktrans %}</span>
+                            <span>{% blocktrans %}Sextas{% endblocktrans %}</span>
                             <br>
                             <p>{% blocktrans %}Manhã{% endblocktrans %}: 10:30<br>{% blocktrans %}Noite{% endblocktrans %}: 20:30</p>
                             <smal>({% blocktrans %}Horário de Brasília{% endblocktrans %})</smal>
