--- a/html/templates/subscriber_return.html
+++ b/html/templates/subscriber_return.html
@@ -54,28 +54,28 @@
             </div>
         </div>
     </nav>
-
+{% if message == 1 %}
         <!-- Sucesso -->
             <div class="container">
                 <div class="box-resposta">
                     <p class="text-success"><i class="fa fa-check-circle fa-3x"></i></p>
                     <p class="titulo text-success">Parabéns. <br> Sua Assinatura está ATIVA</p><br>
-                    <a class="btn btn-primary btn-block btn-block-70" href="#"><i class="fa fa-link"></i> Acessar Plataforma Agora</a>
+                    <a class="btn btn-primary btn-block btn-block-70" href="{% url 'store' %}"><i class="fa fa-link"></i> Acessar a Plataforma Agora</a>
                 </div>
             </div>
         <!-- sucesso -->
-
+{% elif message == 2 %}
         <!-- Falha -->
             <div class="container">
                 <div class="box-resposta">
                     <p class="text-danger"><i class="fa fa-times-circle fa-3x"></i></p>
-                    <p class="titulo text-danger">Falha. <br> Sua Assinatura NÃO foi ativada</p>
-                    <p class="text-info">Entre em contato com o suporte pelo email support@voiservices.com</p>
-                    <p><a href="#"><i class="fa fa-link"></i> Voltar para tela de cadastro</a> </p><br>
+                    <p class="titulo text-danger">Sua Assinatura NÃO foi ativada</p>
+                    <p class="text-info">Em caso de dúvidas, entre em contato com o suporte pelo email support@voiservices.com</p>
+                    <p><a href="{% url 'user_edit' %}"><i class="fa fa-link"></i> Voltar à tela do seu cadastro</a> </p><br>
                 </div>
             </div>
         <!-- Falha -->
-
+{% else %}
         <!-- Cancelamento -->
             <div class="container">
                 <div class="box-resposta">
@@ -85,7 +85,7 @@
                 </div>
             </div>
         <!-- cancelamento -->
-
+{% endif %}
     <footer class="fixed-footer">
         <div class="container">
             <div class="row">
