--- a/html/templates/user_edit.html
+++ b/html/templates/user_edit.html
@@ -153,7 +153,7 @@
                         <div class="box-valor ass">
                             <p><strong>VOI Prime</strong></p><hr>
                             <p><strong>{% trans "Assinatura" %}:</strong> Ativa</p>
-                            <p><strong>{% trans "Vencimento" %}:</strong> 20</p>
+                            {% comment %}<p><strong>{% trans "Vencimento" %}:</strong> 20</p>{% endcomment %}
                             <p><strong>{% trans "Pagamento" %}:</strong> Paypal</p><hr>
 
                             <a href="{% url 'user_unsubscribe' 1 %}" target="_blank" class="btn btn-default"><i class="fa fa-minus-circle"></i> {% trans "Cancelar Assinatura" %}</a>
@@ -168,7 +168,7 @@
                         <div class="box-valor ass">
                             <p><strong>We Create your Amazon Shipment</strong></p><hr>
                             <p><strong>{% trans "Assinatura" %}:</strong> Ativa</p>
-                            <p><strong>{% trans "Vencimento" %}:</strong> 12</p>
+                            {% comment %}<p><strong>{% trans "Vencimento" %}:</strong> 12</p>{% endcomment %}
                             <p><strong>{% trans "Pagamento" %}:</strong> Paypal</p><hr>
 
                             <a href="{% url 'user_unsubscribe' 2 %}" target="_blank" class="btn btn-default"><i class="fa fa-minus-circle"></i> {% trans "Cancelar Assinatura" %}</a>
