comentado parte de log pois ainda está em todo.

--- a/html/templates/base_shipment_list.html
+++ b/html/templates/base_shipment_list.html
@@ -112,7 +112,9 @@
                     <a title="{{ order_status }}" href="javascript:void(0);">{{ status }} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
                   <th class="center">{% trans "Visualizar" %}</th>
+{% comment %}
                   <th class="center">{% trans "Log" %}</th>
+{% endcomment %}
                 </tr>
               </thead>
               <tbody>
@@ -138,7 +140,9 @@
                     {% endif %}
                   </td>
                   <td class="center"><a class="download" href="{% url 'shipment_details' shipment.id %}"><i class="fa fa-pencil-square"></i> {% trans "Visualizar" %}</a></td>
+{% comment %}
                   <td class="center"><a class="download" href="#"><i class="fa fa-pencil-square"></i> {% trans "Log" %}</a></td>
+{% endcomment %}
                 </tr>
               {% endfor %}
               </tbody>
