Ajuste horário store lista

--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -115,7 +115,7 @@
                         <div class="col-schedule">
                             <span>{% blocktrans %}Quartas{% endblocktrans %}</span>
                             <br>
-                            <p>{% blocktrans %}Manhã{% endblocktrans %}: 10:30<br>{% blocktrans %}Noite{% endblocktrans %}: 20:30</p>
+                            <p>{% blocktrans %}Noite{% endblocktrans %}: 21:30</p>
                             <smal>({% blocktrans %}Horário de Brasília{% endblocktrans %})</smal>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                         <div class="col-schedule">
                             <span>{% blocktrans %}Sextas{% endblocktrans %}</span>
                             <br>
-                            <p>{% blocktrans %}Manhã{% endblocktrans %}: 10:30<br>{% blocktrans %}Noite{% endblocktrans %}: 20:30</p>
+                            <p>{% blocktrans %}Noite{% endblocktrans %}: 21:30</p>
                             <smal>({% blocktrans %}Horário de Brasília{% endblocktrans %})</smal>
                         </div><br><br>
                     </div>
